--- a/q1_abstract_factories_question/.gitignore
+++ b/q1_abstract_factories_question/.gitignore
@@ -1,11 +1,10 @@
 nbproject
 ._*
-.vagrant
 .~lock.*
 .buildpath
 .DS_Store
 .idea
 .project
 .settings
-vendor
-composer.phar
+composer.lock
+vendor/bin
