--- a/q1_abstract_factories_question/composer.json
+++ b/q1_abstract_factories_question/composer.json
@@ -8,8 +8,7 @@
     ],
     "homepage": "http://framework.zend.com/",
     "require": {
-        "php": ">=5.3",
-        "zendframework/zendframework": "2.2.*",
-        "zendframework/zend-developer-tools": "*"
+        "php": ">=5.3.3",
+        "zendframework/zendframework": "2.2.10"
     }
 }
